--- a/src/index.html
+++ b/src/index.html
@@ -38,9 +38,9 @@
 
   <header class="header">
     <div class="container header__container">
-      <div class="header__menu">
+      <button class="header__menu" aria-label="Кнопка вызова меню">
         <span class="header__line"></span>
-      </div>
+      </button>
 
       <nav class="header__burger burger">
         <ul class="burger__list">
@@ -64,7 +64,7 @@
       
       <img src="image/header/logo.svg" alt="Логотип" class="logo">
 
-      <a href="tel:88493003957" class="header__phone">8 (849) 300 - 39 -57</a>
+      <a href="tel:88493003957" class="header__phone" aria-label="Телефон">8 (849) 300 - 39 -57</a>
     </div>
   </header>
 
@@ -191,51 +191,51 @@
           <div class="projects__more">
             <h4 class="projects__info-text">Больше проектов</h4>
             
-            <a href="#" class="projects__info-project">
+            <a href="#" class="projects__info-project" aria-label="Ссылка на другой проект">
               <img src="image/projects/1.jpg" alt="" class="projects__info-pic">
             </a>
 
-            <a href="#" class="projects__info-project">
+            <a href="#" class="projects__info-project" aria-label="Ссылка на другой проект">
               <img src="image/projects/2.jpg" alt="" class="projects__info-pic">
             </a>
 
-            <a href="#" class="projects__info-project">
+            <a href="#" class="projects__info-project" aria-label="Ссылка на другой проект">
               <img src="image/projects/3.jpg" alt="" class="projects__info-pic">
             </a>
 
-            <a href="#" class="projects__info-project">
+            <a href="#" class="projects__info-project" aria-label="Ссылка на другой проект">
               <img src="image/projects/4.jpg" alt="" class="projects__info-pic">
             </a>
 
-            <a href="#" class="projects__info-project">
+            <a href="#" class="projects__info-project" aria-label="Ссылка на другой проект">
               <img src="image/projects/5.jpg" alt="" class="projects__info-pic">
             </a>
 
-            <a href="#" class="projects__info-project">
+            <a href="#" class="projects__info-project" aria-label="Ссылка на другой проект">
               <img src="image/projects/6.jpg" alt="" class="projects__info-pic">
             </a>
 
-            <a href="#" class="projects__info-project">
+            <a href="#" class="projects__info-project" aria-label="Ссылка на другой проект">
               <img src="image/projects/7.jpg" alt="" class="projects__info-pic">
             </a>
 
-            <a href="#" class="projects__info-project">
+            <a href="#" class="projects__info-project" aria-label="Ссылка на другой проект">
               <img src="image/projects/8.jpg" alt="" class="projects__info-pic">
             </a>
 
-            <a href="#" class="projects__info-project">
+            <a href="#" class="projects__info-project" aria-label="Ссылка на другой проект">
               <img src="image/projects/9.jpg" alt="" class="projects__info-pic">
             </a>
 
-            <a href="#" class="projects__info-project">
+            <a href="#" class="projects__info-project" aria-label="Ссылка на другой проект">
               <img src="image/projects/10.jpg" alt="" class="projects__info-pic">
             </a>
 
-            <a href="#" class="projects__info-project">
+            <a href="#" class="projects__info-project" aria-label="Ссылка на другой проект">
               <img src="image/projects/11.jpg" alt="" class="projects__info-pic">
             </a>
 
-            <a href="#" class="projects__info-project">
+            <a href="#" class="projects__info-project" aria-label="Ссылка на другой проект">
               <img src="image/projects/12.jpg" alt="" class="projects__info-pic">
             </a>
 
@@ -527,21 +527,21 @@
       <div class="footer__socials">
         <ul class="footer__list">
           <li class="footer__item">
-            <a href="#" class="footer__socials-link footer__item-inst"></a>
+            <a href="#" class="footer__socials-link footer__item-inst" aria-label="Ссылка на инстраграм"></a>
           </li>
           <li class="footer__item">
-            <a href="#" class="footer__socials-link footer__item-vk"></a>
+            <a href="#" class="footer__socials-link footer__item-vk" aria-label="Ссылка на вконтакте"></a>
           </li>
           <li class="footer__item">
-            <a href="#" class="footer__socials-link footer__item-fb"></a>
+            <a href="#" class="footer__socials-link footer__item-fb" aria-label="Ссылка на фейсбук"></a>
           </li>
           <li class="footer__item">
-            <a href="#" class="footer__socials-link footer__item-tg"></a>
+            <a href="#" class="footer__socials-link footer__item-tg" aria-label="Ссылка на телеграм"></a>
           </li>
         </ul>
 
         <p class="footer__author">Design by Anastasia Ilina</p>
-        <a href="mailto:ilina9825@gmail.com" class="footer__author footer__author_email">ilina9825@gmail.com</a>
+        <a href="mailto:ilina9825@gmail.com" class="footer__author footer__author_email" aria-label="email диайзнера сайта">ilina9825@gmail.com</a>
       </div>
 
     </div>
@@ -565,12 +565,12 @@
 
           <div class="form__inputs">
             <div class="form__wrap form__wrap_phone">
-              <label for="phone" class=" form__label form__phone">Номер телефона</label>
+              <label for="phoneModal" class=" form__label form__phone">Номер телефона</label>
               <input type="tel" class="form__input form__input_phone" name="phone" id="phoneModal" required>
             </div>
 
             <div class="form__wrap">
-              <label for="email" class=" form__label form__email">E-mail</label>
+              <label for="emailModal" class=" form__label form__email">E-mail</label>
               <input type="email" class="form__input form__input_email" name="email" id="emailModal" required>
             </div>
           </div>
